force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/cgcloud__Account_Visit_Setting__c.object-meta.xml
<CustomObject>
    <description>Settings for calls of a user according to a customer.</description>
    <label>Customer Visit Setting</label>
    <nameField>
        <displayFormat>UCS-{0000}</displayFormat>
        <label>Customer Visit Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Visit Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>