force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls, whether the entry can by used.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>