force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Day_Of_Week__c</fullName>
    <description>Contains the day of the week which has to be used by the automatic planning algorithm to schedule the call.</description>
    <label>Day Of Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>mon</fullName>
            </value>
            <value>
                <fullName>tue</fullName>
            </value>
            <value>
                <fullName>wed</fullName>
            </value>
            <value>
                <fullName>thu</fullName>
            </value>
            <value>
                <fullName>fri</fullName>
            </value>
            <value>
                <fullName>sat</fullName>
            </value>
            <value>
                <fullName>sun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>