force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Duration__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Duration__c</fullName>
    <description>Is a numeric value which is used to describe how long a call of the specified category typically takes with the related account.</description>
    <inlineHelpText>Please enter the duration of Call in minutes. If blank, the duration will be taken from the Visit Template settings.</inlineHelpText>
    <label>Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>