force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Frequency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Frequency__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Week Frequency.</description>
    <label>Frequency</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>