force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Initial_Year__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Initial_Year__c</fullName>
    <description>The first year of the planning.</description>
    <label>Initial Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2015</fullName>
                <default>true</default>
                <label>2015</label>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>