force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Management_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Management_Type__c</fullName>
    <description>Corresponds with the management type of the management relation between a user and a account.</description>
    <label>Management Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CallCenter</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>