force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Overdue_Check__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Overdue_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer with a particular visit template can be marked as overdue.

Determines if a customer will be shown as overdue.</description>
    <label>Overdue Check</label>
    <type>Checkbox</type>
</CustomField>