force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Overdue_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Overdue_Date__c</fullName>
    <description>Updated on completing the call for a particular visit template.

Till this date, the customer will be referred to as overdue customer.</description>
    <label>Overdue Date</label>
    <type>Date</type>
</CustomField>