force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Planning_Mode__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Planning_Mode__c</fullName>
    <description>Mode of automatic call planning.</description>
    <label>Planning Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>StartWeek</fullName>
                <default>true</default>
                <label>StartWeek</label>
            </value>
            <value>
                <fullName>StartWeekYear</fullName>
            </value>
            <value>
                <fullName>LastCall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>