force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Start_Week__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Week__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Week of year to start with automatic call planning.</description>
    <label>Start Week</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>