force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Time_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Time_Of_Day__c</fullName>
    <description>Contains the time of day which has to be used by the automatic planning algorithm to schedule the call. Can be empty.</description>
    <inlineHelpText>Please enter time in hh:mm format (00:00-23:59)</inlineHelpText>
    <label>Time Of Day</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>