force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/fields/cgcloud__Visit_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to visit template.</description>
    <label>Visit Template</label>
    <referenceTo>cgcloud__Visit_Template__c</referenceTo>
    <relationshipLabel>Customer Visit Settings</relationshipLabel>
    <relationshipName>Account_Visits_Setting</relationshipName>
    <type>Lookup</type>
</CustomField>