force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/validationRules/cgcloud__Time_of_Day_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Time_of_Day_Format_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISBLANK(cgcloud__Time_Of_Day__c )), 
NOT(REGEX(cgcloud__Time_Of_Day__c , &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;)) 
)</errorConditionFormula>
    <errorMessage>Please enter the correct format for Time of Day (hh:mm).</errorMessage>
</ValidationRule>