force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/validationRules/cgcloud__Valid_From_Valid_Thru_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Valid_From_Valid_Thru_Validation</fullName>
    <active>true</active>
    <description>Valid From can&apos;t be later than Valid Thru.</description>
    <errorConditionFormula>cgcloud__Valid_From__c &gt; cgcloud__Valid_Thru__c</errorConditionFormula>
    <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
</ValidationRule>