force-app/main/default/objects/cgcloud__Account_Visit_Setting__c/validationRules/cgcloud__VisitTemplateCannotBeEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__VisitTemplateCannotBeEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>OR (ISBLANK(cgcloud__Visit_Template__c ), ISNULL(cgcloud__Visit_Template__c ) )</errorConditionFormula>
    <errorMessage>The Visit Template can&apos;t be empty.</errorMessage>
</ValidationRule>